Bug 1838756 - do not adjust timestamp again for samples, which has been adjusted, when pushing them back to the audio queue. r=padenot

When seamless looping is on, sample's timestamp would only be adjusted
when they first get pushed into the media queue.

When re-queuing sample back to the audio queue from the
`mProcessedSPSCQueue`, we don't need to apply timestamp adjustment
again. Otherwise, it would result in incorrect audio time so that the
AudioSink would never discard samples [1] during muting, causing audio
being delayed.

[1]
https://searchfox.org/mozilla-central/rev/d307d4d9f06dab6d16e963a4318e5e8ff4899141/dom/media/mediasink/AudioSinkWrapper.cpp#159

Differential Revision: https://phabricator.services.mozilla.com/D181817